created links to each page

--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cattleya Pia</title>
+    <title>Cattleya CJ Pia</title>
 </head>
 <body>
+    <header>
+        <a href= "index.html"> Cattleya CJ Pia</a>
+        <a href= "index.html"> About Me </a>
+        <a href= "contact.html"> Contact</a>
+        <a href= "portfolio.html"> Portfolio</a>
+    </header>
     
 </body>
 </html>
