--- a/index.html
+++ b/index.html
@@ -3,15 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="style.css">
+
     <title>Cattleya CJ Pia</title>
 </head>
 <body>
     <header>
-        <a href= "index.html"> Cattleya CJ Pia</a>
-        <a href= "index.html"> About Me </a>
-        <a href= "contact.html"> Contact</a>
-        <a href= "portfolio.html"> Portfolio</a>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <a class="navbar-brand" href="index.html">Cattleya CJ Pia</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+              <div class="navbar-nav">
+                <a class="nav-item nav-link active" href="index.html">About Me <span class="sr-only">(current)</span></a>
+                <a class="nav-item nav-link" href= "portfolio.html"> Portfolio</a>
+                <a class="nav-item nav-link" href="contact.html">Contact</a>
+              </div>
+            </div>
+          </nav>
     </header>
-    
+    <h1> About Me</h1>
+        <img src= "https://scontent-lax3-1.xx.fbcdn.net/v/t1.0-9/11156369_462175613939101_532350097875516246_n.jpg?_nc_cat=105&_nc_sid=7aed08&_nc_ohc=Qzo6f9-gMkkAX_yX2UQ&_nc_ht=scontent-lax3-1.xx&oh=2622a01a1ab69b8653be093964559ab0&oe=5EB648BF"
+         alt= "Photo of Cattleya Pia" class= "CJ"/>
+     <p>
+        Hi! I'm Cattleya Pia, but I prefer CJ. I'm brand new to web development after a major career switch. I was initially headed
+        towards Healthcare Management, but after having experienced the administrative side of that, I knew I wouldn't get any fulfillment. 
+        I am all at once excited and anxious &#40; okay, EXTREMELY anxious &#41;, but I will continue to push through and improve my skills
+        every step of the way. 
+     </p>
 </body>
 </html>
