--- a/portfolio.html
+++ b/portfolio.html
@@ -5,12 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css">
     <title>Cattleya CJ Pia</title>
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <nav class="navbar navbar-light bg-light">
+            <span class="navbar-brand mb-0 h1"> <div class= "bg-info text-white">Cattleya CJ Pia</div></span>
+            <ul class="nav justify-content-end">
+                <li class="nav-item">
+                <a class="nav-link active" href="index.html">About Me</a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link" href="portfolio.html">Portfolio</a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link" href="contact.html">Contact</a>
+                </li>
+            </ul>
+        </nav>
+        <!-- <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <a class="navbar-brand" href="index.html">Cattleya CJ Pia</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -22,7 +35,7 @@
                 <a class="nav-item nav-link" href="contact.html">Contact</a>
               </div>
             </div>
-          </nav>
+          </nav> -->
     </header>
     
 </body>
