--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <nav class="navbar navbar-light bg-light">
-            <span class="navbar-brand mb-0 h1"> <div class= "bg-info text-white">Cattleya CJ Pia</div></span>
+            <a class="navbar-brand mb-0 h1" href="index.html"> <div class= "bg-info text-white">Cattleya CJ Pia</div></a>
             <ul class="nav justify-content-end">
                 <li class="nav-item">
                 <a class="nav-link active" href="index.html">About Me</a>
@@ -24,6 +24,6 @@
             </ul>
         </nav>
     </header>
-
+    <p class="h1"> Contact</p>
 </body>
 </html>
