--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <nav class="navbar navbar-light bg-light">
-            <span class="navbar-brand mb-0 h1"> <div class= "bg-info text-white">Cattleya CJ Pia</div></span>
+            <a class="navbar-brand mb-0 h1" href="index.html"> <div class= "bg-info text-white">Cattleya CJ Pia</div></a>
             <ul class="nav justify-content-end">
                 <li class="nav-item">
                 <a class="nav-link active" href="index.html">About Me</a>
@@ -23,20 +23,7 @@
                 </li>
             </ul>
         </nav>
-        <!-- <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="index.html">Cattleya CJ Pia</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-              <div class="navbar-nav">
-                <a class="nav-item nav-link active" href="index.html">About Me <span class="sr-only">(current)</span></a>
-                <a class="nav-item nav-link" href= "portfolio.html"> Portfolio</a>
-                <a class="nav-item nav-link" href="contact.html">Contact</a>
-              </div>
-            </div>
-          </nav> -->
-    </header>
-    
+     </header>
+    <p class="h1">Portfolio</p>
 </body>
 </html>
