--- a/index.html
+++ b/index.html
@@ -8,8 +8,24 @@
     
     <title>Cattleya CJ Pia</title>
 </head>
+<header>
+    <nav class="navbar navbar-light bg-light">
+        <a class="navbar-brand mb-0 h1" href="index.html"> <div class= "bg-info text-white">Cattleya CJ Pia</div></a>
+        <ul class="nav justify-content-end">
+            <li class="nav-item">
+            <a class="nav-link active" href="index.html">About Me</a>
+            </li>
+            <li class="nav-item">
+            <a class="nav-link" href="portfolio.html">Portfolio</a>
+            </li>
+            <li class="nav-item">
+            <a class="nav-link" href="contact.html">Contact</a>
+            </li>
+        </ul>
+    </nav>
+</header> 
 <body>
-    <header>
+    <!-- <header>
         <nav class="navbar navbar-light bg-light">
             <span class="navbar-brand mb-0 h1"> <div class= "bg-info text-white">Cattleya CJ Pia</div></span>
             <ul class="nav justify-content-end">
@@ -24,14 +40,16 @@
                 </li>
             </ul>
         </nav>
-    </header>
+    </header> -->
     <div class= "container-sm">
         <div class="row">
             <div class="col-8">
-                <h1> About Me</h1>
-                <img src= "https://scontent-lax3-1.xx.fbcdn.net/v/t1.0-9/11156369_462175613939101_532350097875516246_n.jpg?_nc_cat=105&_nc_sid=7aed08&_nc_ohc=Qzo6f9-gMkkAX_yX2UQ&_nc_ht=scontent-lax3-1.xx&oh=2622a01a1ab69b8653be093964559ab0&oe=5EB648BF"
+                <p class="h1"> About Me</p>
+                <img src="https://scontent-lax3-1.xx.fbcdn.net/v/t1.0-9/11156369_462175613939101_532350097875516246_n.jpg?_nc_cat=105&_nc_sid=7aed08&_nc_ohc=Qzo6f9-gMkkAX_yX2UQ&_nc_ht=scontent-lax3-1.xx&oh=2622a01a1ab69b8653be093964559ab0&oe=5EB648BF"
+                     class="float-left" alt="Photo of Cattleya Pia" style="width:200px;height:200px;">
+                <!-- <img src= "https://scontent-lax3-1.xx.fbcdn.net/v/t1.0-9/11156369_462175613939101_532350097875516246_n.jpg?_nc_cat=105&_nc_sid=7aed08&_nc_ohc=Qzo6f9-gMkkAX_yX2UQ&_nc_ht=scontent-lax3-1.xx&oh=2622a01a1ab69b8653be093964559ab0&oe=5EB648BF"
                  alt= "Photo of Cattleya Pia" class= "CJ"/>
-     
+             -->
                     Hi! I'm Cattleya Pia, but I prefer CJ. I'm brand new to web development after a major career switch. I was initially headed
                     towards Healthcare Management, but after having experienced the administrative side of that, I knew I wouldn't get any fulfillment. 
                     I am all at once excited and anxious &#40; okay, EXTREMELY anxious &#41;, but I will continue to push through and improve my skills
