--- a/portfolio.html
+++ b/portfolio.html
@@ -24,6 +24,8 @@
             </ul>
         </nav>
      </header>
-    <p class="h1">Portfolio</p>
+     <div class="Box container-sm">
+        <p class="h1">Portfolio</p>
+    </div>
 </body>
 </html>
