--- a/contact.html
+++ b/contact.html
@@ -24,6 +24,24 @@
             </ul>
         </nav>
     </header>
-    <p class="h1"> Contact</p>
+    <div class= "container">
+        <p class="h1"> Contact</p>
+        <hr>
+        <form>
+            <div class="form-group">
+            <label for="NameInput">Name</label>
+            <input type="name" class="form-control" id="NameInput" aria-describedby="nameInput" placeholder="John Smith">
+            </div>
+            <div class="form-group">
+            <label for="exampleInputeEmail1">Email</label>
+            <input type="email" class="form-control" id="exampleInputeEmail1" placeholder="example@gmail.com">
+            </div>
+            <div class="form-group">
+                <label for="exampleFormControlTextarea1">Message</label>
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+              </div>
+            <button type="submit" class="btn btn-info">Submit</button>
+        </form>
+    </div>
 </body>
 </html>
