added bg colors and margins

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Cattleya CJ Pia</title>
 </head>
 <header>
-    <nav class="navbar navbar-light bg-light">
+    <nav class="navbar navbar-light bg-light" style= "margin-bottom: 30px;">
         <a class="navbar-brand mb-0 h1" href="index.html"> <div class= "bg-info text-white">Cattleya CJ Pia</div></a>
         <ul class="nav justify-content-end">
             <li class="nav-item">
@@ -26,26 +26,11 @@
 </header> 
 <body style="background-color:#eaeded;">
 
-    <!-- <header>
-        <nav class="navbar navbar-light bg-light">
-            <span class="navbar-brand mb-0 h1"> <div class= "bg-info text-white">Cattleya CJ Pia</div></span>
-            <ul class="nav justify-content-end">
-                <li class="nav-item">
-                <a class="nav-link active" href="index.html">About Me</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link" href="portfolio.html">Portfolio</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact</a>
-                </li>
-            </ul>
-        </nav>
-    </header> -->
-    <div class= "container-sm">
+    <div class= "container-sm" style="background-color: white;margin-top: 30px;">
         <div class="row">
-            <div class="col-8">
+            <div class="col-6">
                 <p class="h1"> About Me</p>
+                <hr>
                 <img src="https://scontent-lax3-1.xx.fbcdn.net/v/t1.0-9/11156369_462175613939101_532350097875516246_n.jpg?_nc_cat=105&_nc_sid=7aed08&_nc_ohc=Qzo6f9-gMkkAX_yX2UQ&_nc_ht=scontent-lax3-1.xx&oh=2622a01a1ab69b8653be093964559ab0&oe=5EB648BF"
                      class="float-left" alt="Photo of Cattleya Pia" style="width:200px;height:200px;">
                      
