--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="reset.css">
     <title>Cattleya CJ Pia</title>
 </head>
-<body>
     <header>
         <nav class="navbar navbar-light bg-light">
             <a class="navbar-brand mb-0 h1" href="index.html"> <div class= "bg-info text-white">Cattleya CJ Pia</div></a>
@@ -24,24 +23,25 @@
             </ul>
         </nav>
     </header>
-    <div class= "container">
-        <p class="h1"> Contact</p>
-        <hr>
-        <form>
-            <div class="form-group">
-            <label for="NameInput">Name</label>
-            <input type="name" class="form-control" id="NameInput" aria-describedby="nameInput" placeholder="John Smith">
-            </div>
-            <div class="form-group">
-            <label for="exampleInputeEmail1">Email</label>
-            <input type="email" class="form-control" id="exampleInputeEmail1" placeholder="example@gmail.com">
-            </div>
-            <div class="form-group">
-                <label for="exampleFormControlTextarea1">Message</label>
-                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-              </div>
-            <button type="submit" class="btn btn-info">Submit</button>
-        </form>
-    </div>
-</body>
+    <body style="background-color:#eaeded;">
+        <div class= "container" style="background-color: white;margin-top: 30px;max-width: 960px;">
+            <p class="h1"> Contact</p>
+            <hr>
+            <form>
+                <div class="form-group">
+                <label for="NameInput">Name</label>
+                <input type="name" class="form-control" id="NameInput" aria-describedby="nameInput" placeholder="John Smith">
+                </div>
+                <div class="form-group">
+                <label for="exampleInputeEmail1">Email</label>
+                <input type="email" class="form-control" id="exampleInputeEmail1" placeholder="example@gmail.com">
+                </div>
+                <div class="form-group">
+                    <label for="exampleFormControlTextarea1">Message</label>
+                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                </div>
+                <button type="submit" class="btn btn-info">Submit</button>
+            </form>
+        </div>
+    </body>
 </html>
