added comment descriptions

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <!-- This section contains Navbar elements in the Header -->
 
-<body style="background-color:#eaeded;">
+<body style="background-image:url(https://img.rawpixel.com/s3fs-private/rawpixel_images/website_content/rm31-jj-24-d-paper_1.jpg?w=800&dpr=1&fit=default&crop=default&auto=format&fm=pjpg&q=75&vib=3&con=3&usm=15&bg=F4F4F3&ixlib=js-2.2.1&s=b3fb0eb115f735dc19d87312663451a2)">
     <header>
         <nav class="navbar navbar-light bg-light" style= "margin-bottom: 30px;">
             <a class="navbar-brand mb-0 h1" href="index.html"> <div class= "bg-info text-white p-3"> Cattleya CJ Pia</div></a>
@@ -46,12 +46,12 @@
             <p text-align= "justify"> 
                 I'm brand new to web development after a major career switch. I was initially headed
                 towards Healthcare Management, but after having experienced the administrative side of that, I knew I wouldn't get any fulfillment. 
-                I am all at once excited and anxious &#40; okay, EXTREMELY anxious &#41;, but I will continue to push through and improve my skills
+                I am all at once excited and anxious &#40; okay, EXTREMELY anxious &#41;, but I am continuing to push through and improve my skills
                 every step of the way.</p>
-                
             </div>
         </div>
     </div>
+    <!-- This is the Footer section -->
     <footer class="footer fixed-bottom mt-5 p-3 text-center "  style="background-color: darkgray;">
         <div class="container"> 
             <span class="text-white">&copy; Copyright CJ Pia</span> 
