--- a/portfolio.html
+++ b/portfolio.html
@@ -3,20 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
     <title>Cattleya CJ Pia</title>
 </head>
-<body>
+<body style="background-image:url(https://img.rawpixel.com/s3fs-private/rawpixel_images/website_content/rm31-jj-24-d-paper_1.jpg?w=800&dpr=1&fit=default&crop=default&auto=format&fm=pjpg&q=75&vib=3&con=3&usm=15&bg=F4F4F3&ixlib=js-2.2.1&s=b3fb0eb115f735dc19d87312663451a2)">
     <header>
         <nav class="navbar navbar-light bg-light">
-            <a class="navbar-brand mb-0 h1" href="index.html"> <div class= "bg-info text-white">Cattleya CJ Pia</div></a>
+            <a class="navbar-brand mb-0 h1" href="index.html"> <div class= "bg-info text-white p-3">Cattleya CJ Pia</div></a>
             <ul class="nav justify-content-end">
                 <li class="nav-item">
-                <a class="nav-link active" href="index.html">About Me</a>
+                <a class="nav-link active border-right" href="index.html">About Me</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" href="portfolio.html">Portfolio</a>
+                <a class="nav-link border-right" href="portfolio.html">Portfolio</a>
                 </li>
                 <li class="nav-item">
                 <a class="nav-link" href="contact.html">Contact</a>
@@ -24,9 +25,26 @@
             </ul>
         </nav>
      </header>
-     <div class="Box container-sm">
-        <p class="h1">Portfolio</p>
-        <hr>
+     <div class= "container" style="background-color: white;margin: 30px; width:760px !important;" >
+        <div class="row">
+            <div class="col-8"> 
+                <h1 style="color:darkcyan; padding-top: 1rem;"> Portfolio</h1>
+                <hr>
+        <div class="row"></div>
+            <div class="col-6"></div>
+            <div class="col-6"></div>
+        <div class="row"></div>
+            <div class="col-6"></div>
+            <div class="col-6"></div>
+        <div class="row"></div>
+            <div class="col-6"></div>
+
+
     </div>
+    <footer class="footer fixed-bottom mt-5 p-3 text-center "  style="background-color: darkgray;">
+        <div class="container"> 
+            <span class="text-white">&copy; Copyright CJ Pia</span> 
+        </div>
+    </footer>
 </body>
 </html>
