added all images, tried to adjust alignments, tested responsiveness

--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
     
     <title>Cattleya CJ Pia</title>
 </head>
+<!-- This is the Navbar Section -->
 <body style="background-image:url(https://img.rawpixel.com/s3fs-private/rawpixel_images/website_content/rm31-jj-24-d-paper_1.jpg?w=800&dpr=1&fit=default&crop=default&auto=format&fm=pjpg&q=75&vib=3&con=3&usm=15&bg=F4F4F3&ixlib=js-2.2.1&s=b3fb0eb115f735dc19d87312663451a2)">
     <header>
         <nav class="navbar navbar-light bg-light">
@@ -25,15 +26,16 @@
             </ul>
         </nav>
     </header>
-    <div class= "container" style="background-color: white;margin: 30px; width:760px !important;" >
+    <!-- This is the form section where contact information can be inputted -->
+    <div class= "container" style="background-color: white;margin: 30px;" >
         <div class="row">
-            <div class="col-8"> 
+            <div class="col-12"> 
                 <h1 style="color:darkcyan; padding-top: 1rem;"> Contact</h1>
                 <hr>
                 <form>
                     <div class="form-group">
                     <label for="NameInput">Name</label>
-                    <input type="name" class="form-control" id="NameInput" aria-describedby="nameInput" placeholder="John Smith">
+                    <input type="text" class="form-control" id="NameInput" aria-describedby="textInput" placeholder="John Smith">
                     </div>
                     <div class="form-group">
                     <label for="exampleInputeEmail1">Email</label>
@@ -48,6 +50,7 @@
             </div>
         </div>
     </div> -->
+    <!-- This is the Footer Section -->
     <footer class="footer fixed-bottom mt-5 p-3 text-center "  style="background-color: darkgray;">
         <div class="container"> 
             <span class="text-white">&copy; Copyright CJ Pia</span> 
